--- a/app/src/main/res/layout/fragment_date_of_birth.xml
+++ b/app/src/main/res/layout/fragment_date_of_birth.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout
-	xmlns:android = "http://schemas.android.com/apk/res/android"
-	xmlns:app = "http://schemas.android.com/apk/res-auto"
-	xmlns:tools = "http://schemas.android.com/tools"
+	xmlns:android="http://schemas.android.com/apk/res/android"
+	xmlns:app="http://schemas.android.com/apk/res-auto"
+	xmlns:tools="http://schemas.android.com/tools"
 	>
 	
 	<data>
@@ -10,42 +10,42 @@
 	</data>
 	
 	<androidx.constraintlayout.widget.ConstraintLayout
-		android:layout_width = "match_parent"
-		android:layout_height = "match_parent"
-		tools:context = ".signup.DateOfBirthFragment"
+		android:layout_width="match_parent"
+		android:layout_height="match_parent"
+		tools:context=".signup.form.DateOfBirthFragment"
 		>
 		
 		<com.google.android.material.textfield.TextInputLayout
-			android:id = "@+id/date_of_birth_field_layout"
-			style = "@style/Widget.HappyApp.TextInputLayout"
-			android:layout_width = "match_parent"
-			android:layout_height = "wrap_content"
-			app:errorEnabled = "true"
-			app:layout_constraintEnd_toEndOf = "parent"
-			app:layout_constraintStart_toStartOf = "parent"
-			app:layout_constraintTop_toTopOf = "parent"
+			android:id="@+id/date_of_birth_field_layout"
+			style="@style/Widget.HappyApp.TextInputLayout"
+			android:layout_width="match_parent"
+			android:layout_height="wrap_content"
+			app:errorEnabled="true"
+			app:layout_constraintEnd_toEndOf="parent"
+			app:layout_constraintStart_toStartOf="parent"
+			app:layout_constraintTop_toTopOf="parent"
 			>
 			
 			<com.google.android.material.textfield.TextInputEditText
-				android:id = "@+id/date_of_birth_field"
-				android:layout_width = "match_parent"
-				android:layout_height = "match_parent"
-				android:hint = "@string/date_of_birth_with_star"
-				android:imeActionId = "6"
-				android:imeOptions = "actionDone"
-				android:inputType = "date"
+				android:id="@+id/date_of_birth_field"
+				android:layout_width="match_parent"
+				android:layout_height="match_parent"
+				android:hint="@string/date_of_birth_with_star"
+				android:imeActionId="6"
+				android:imeOptions="actionDone"
+				android:inputType="date"
 				/>
 		</com.google.android.material.textfield.TextInputLayout>
 		
 		<com.google.android.material.button.MaterialButton
-			android:id = "@+id/next_button"
-			style = "@style/Widget.HappyApp.ContainedButton"
-			android:layout_width = "wrap_content"
-			android:layout_height = "wrap_content"
-			android:text = "@string/subscribe"
-			app:layout_constraintEnd_toEndOf = "parent"
-			app:layout_constraintStart_toStartOf = "parent"
-			app:layout_constraintTop_toBottomOf = "@id/date_of_birth_field_layout"
+			android:id="@+id/next_button"
+			style="@style/Widget.HappyApp.ContainedButton"
+			android:layout_width="wrap_content"
+			android:layout_height="wrap_content"
+			android:text="@string/subscribe"
+			app:layout_constraintEnd_toEndOf="parent"
+			app:layout_constraintStart_toStartOf="parent"
+			app:layout_constraintTop_toBottomOf="@id/date_of_birth_field_layout"
 			/>
 	
 	</androidx.constraintlayout.widget.ConstraintLayout>
