--- a/app/src/main/res/layout/fragment_email_signup.xml
+++ b/app/src/main/res/layout/fragment_email_signup.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout
-	xmlns:android = "http://schemas.android.com/apk/res/android"
-	xmlns:app = "http://schemas.android.com/apk/res-auto"
-	xmlns:tools = "http://schemas.android.com/tools"
+	xmlns:android="http://schemas.android.com/apk/res/android"
+	xmlns:app="http://schemas.android.com/apk/res-auto"
+	xmlns:tools="http://schemas.android.com/tools"
 	>
 	
 	<data>
@@ -10,38 +10,38 @@
 	</data>
 	
 	<androidx.constraintlayout.widget.ConstraintLayout
-		android:layout_width = "match_parent"
-		android:layout_height = "match_parent"
-		tools:context = ".signup.EmailSignupFragment"
+		android:layout_width="match_parent"
+		android:layout_height="match_parent"
+		tools:context=".signup.EmailSignupFragment"
 		>
 		
 		<TextView
-			android:id = "@+id/title"
-			android:layout_width = "match_parent"
-			android:layout_height = "wrap_content"
-			android:padding = "13dp"
-			android:text = "@string/sign_up_and_subscribe_for_happyapp"
-			android:textAlignment = "center"
-			android:textAppearance = "?attr/textAppearanceHeadline5"
-			app:layout_constraintEnd_toEndOf = "parent"
-			app:layout_constraintStart_toStartOf = "parent"
-			app:layout_constraintTop_toTopOf = "parent"
+			android:id="@+id/title"
+			android:layout_width="match_parent"
+			android:layout_height="wrap_content"
+			android:padding="13dp"
+			android:text="@string/sign_up_and_subscribe_for_happyapp"
+			android:textAlignment="center"
+			android:textAppearance="?attr/textAppearanceHeadline5"
+			app:layout_constraintEnd_toEndOf="parent"
+			app:layout_constraintStart_toStartOf="parent"
+			app:layout_constraintTop_toTopOf="parent"
 			/>
 		
 		<androidx.fragment.app.FragmentContainerView
-			android:id = "@+id/signup_nav_host_fragment"
-			android:name = "androidx.navigation.fragment.NavHostFragment"
-			android:layout_width = "match_parent"
-			android:layout_height = "wrap_content"
-			android:layout_marginHorizontal = "13dp"
-			android:background = "@drawable/main_fragment_shape"
-			android:elevation = "8dp"
-			app:defaultNavHost = "true"
-			app:layout_constraintBottom_toBottomOf = "parent"
-			app:layout_constraintEnd_toEndOf = "parent"
-			app:layout_constraintStart_toStartOf = "parent"
-			app:layout_constraintTop_toTopOf = "parent"
-			app:navGraph = "@navigation/signup_nav_graph"
+			android:id="@+id/signup_nav_host_fragment"
+			android:name="androidx.navigation.fragment.NavHostFragment"
+			android:layout_width="match_parent"
+			android:layout_height="wrap_content"
+			android:layout_marginHorizontal="13dp"
+			android:background="@drawable/main_fragment_shape"
+			android:elevation="8dp"
+			app:defaultNavHost="true"
+			app:layout_constraintBottom_toBottomOf="parent"
+			app:layout_constraintEnd_toEndOf="parent"
+			app:layout_constraintStart_toStartOf="parent"
+			app:layout_constraintTop_toTopOf="parent"
+			app:navGraph="@navigation/signup_nav_graph"
 			/>
 	
 	</androidx.constraintlayout.widget.ConstraintLayout>
