--- a/app/src/main/res/layout/fragment_first_name.xml
+++ b/app/src/main/res/layout/fragment_first_name.xml
@@ -1,51 +1,50 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout
-	xmlns:android = "http://schemas.android.com/apk/res/android"
-	xmlns:app = "http://schemas.android.com/apk/res-auto"
-	xmlns:tools = "http://schemas.android.com/tools"
+	xmlns:android="http://schemas.android.com/apk/res/android"
+	xmlns:app="http://schemas.android.com/apk/res-auto"
+	xmlns:tools="http://schemas.android.com/tools"
 	>
 	
 	<data>
-	
 	</data>
 	
 	<androidx.constraintlayout.widget.ConstraintLayout
-		android:layout_width = "match_parent"
-		android:layout_height = "match_parent"
-		tools:context = ".signup.FirstNameFragment"
+		android:layout_width="match_parent"
+		android:layout_height="match_parent"
+		tools:context=".signup.form.FirstNameFragment"
 		>
 		
 		<com.google.android.material.textfield.TextInputLayout
-			android:id = "@+id/first_name_field_layout"
-			style = "@style/Widget.HappyApp.TextInputLayout"
-			android:layout_width = "match_parent"
-			android:layout_height = "wrap_content"
-			app:errorEnabled = "true"
-			app:layout_constraintEnd_toEndOf = "parent"
-			app:layout_constraintStart_toStartOf = "parent"
-			app:layout_constraintTop_toTopOf = "parent"
+			android:id="@+id/first_name_field_layout"
+			style="@style/Widget.HappyApp.TextInputLayout"
+			android:layout_width="match_parent"
+			android:layout_height="wrap_content"
+			app:errorEnabled="true"
+			app:layout_constraintEnd_toEndOf="parent"
+			app:layout_constraintStart_toStartOf="parent"
+			app:layout_constraintTop_toTopOf="parent"
 			>
 			
 			<com.google.android.material.textfield.TextInputEditText
-				android:id = "@+id/first_name_field"
-				android:layout_width = "match_parent"
-				android:layout_height = "match_parent"
-				android:hint = "@string/first_name_with_star"
-				android:imeActionId = "1"
-				android:imeOptions = "actionNext"
-				android:inputType = "textCapSentences|textAutoCorrect"
+				android:id="@+id/first_name_field"
+				android:layout_width="match_parent"
+				android:layout_height="match_parent"
+				android:hint="@string/first_name_with_star"
+				android:imeActionId="1"
+				android:imeOptions="actionNext"
+				android:inputType="textCapSentences|textAutoCorrect"
 				/>
 		</com.google.android.material.textfield.TextInputLayout>
 		
 		<com.google.android.material.button.MaterialButton
-			android:id = "@+id/next_button"
-			style = "@style/Widget.HappyApp.TextButton"
-			android:layout_width = "wrap_content"
-			android:layout_height = "wrap_content"
-			android:text = "@string/next"
-			app:layout_constraintEnd_toEndOf = "parent"
-			app:layout_constraintStart_toStartOf = "parent"
-			app:layout_constraintTop_toBottomOf = "@id/first_name_field_layout"
+			android:id="@+id/next_button"
+			style="@style/Widget.HappyApp.TextButton"
+			android:layout_width="wrap_content"
+			android:layout_height="wrap_content"
+			android:text="@string/next"
+			app:layout_constraintEnd_toEndOf="parent"
+			app:layout_constraintStart_toStartOf="parent"
+			app:layout_constraintTop_toBottomOf="@id/first_name_field_layout"
 			/>
 	
 	</androidx.constraintlayout.widget.ConstraintLayout>
