--- a/app/src/main/res/layout/fragment_password.xml
+++ b/app/src/main/res/layout/fragment_password.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout
-	xmlns:android = "http://schemas.android.com/apk/res/android"
-	xmlns:app = "http://schemas.android.com/apk/res-auto"
-	xmlns:tools = "http://schemas.android.com/tools"
+	xmlns:android="http://schemas.android.com/apk/res/android"
+	xmlns:app="http://schemas.android.com/apk/res-auto"
+	xmlns:tools="http://schemas.android.com/tools"
 	>
 	
 	<data>
@@ -10,43 +10,43 @@
 	</data>
 	
 	<androidx.constraintlayout.widget.ConstraintLayout
-		android:layout_width = "match_parent"
-		android:layout_height = "match_parent"
-		tools:context = ".signup.PasswordFragment"
+		android:layout_width="match_parent"
+		android:layout_height="match_parent"
+		tools:context=".signup.form.PasswordFragment"
 		>
 		
 		<com.google.android.material.textfield.TextInputLayout
-			android:id = "@+id/password_field_layout"
-			style = "@style/Widget.HappyApp.TextInputLayout"
-			android:layout_width = "match_parent"
-			android:layout_height = "wrap_content"
-			app:errorEnabled = "true"
-			app:layout_constraintEnd_toEndOf = "parent"
-			app:layout_constraintStart_toStartOf = "parent"
-			app:layout_constraintTop_toTopOf = "parent"
-			app:passwordToggleEnabled = "true"
+			android:id="@+id/password_field_layout"
+			style="@style/Widget.HappyApp.TextInputLayout"
+			android:layout_width="match_parent"
+			android:layout_height="wrap_content"
+			app:errorEnabled="true"
+			app:layout_constraintEnd_toEndOf="parent"
+			app:layout_constraintStart_toStartOf="parent"
+			app:layout_constraintTop_toTopOf="parent"
+			app:passwordToggleEnabled="true"
 			>
 			
 			<com.google.android.material.textfield.TextInputEditText
-				android:id = "@+id/password_field"
-				android:layout_width = "match_parent"
-				android:layout_height = "match_parent"
-				android:hint = "@string/username_with_star"
-				android:imeActionId = "5"
-				android:imeOptions = "actionNext"
-				android:inputType = "textPassword"
+				android:id="@+id/password_field"
+				android:layout_width="match_parent"
+				android:layout_height="match_parent"
+				android:hint="@string/username_with_star"
+				android:imeActionId="5"
+				android:imeOptions="actionNext"
+				android:inputType="textPassword"
 				/>
 		</com.google.android.material.textfield.TextInputLayout>
 		
 		<com.google.android.material.button.MaterialButton
-			android:id = "@+id/next_button"
-			style = "@style/Widget.HappyApp.TextButton"
-			android:layout_width = "wrap_content"
-			android:layout_height = "wrap_content"
-			android:text = "@string/next"
-			app:layout_constraintEnd_toEndOf = "parent"
-			app:layout_constraintStart_toStartOf = "parent"
-			app:layout_constraintTop_toBottomOf = "@id/password_field_layout"
+			android:id="@+id/next_button"
+			style="@style/Widget.HappyApp.TextButton"
+			android:layout_width="wrap_content"
+			android:layout_height="wrap_content"
+			android:text="@string/next"
+			app:layout_constraintEnd_toEndOf="parent"
+			app:layout_constraintStart_toStartOf="parent"
+			app:layout_constraintTop_toBottomOf="@id/password_field_layout"
 			/>
 	
 	</androidx.constraintlayout.widget.ConstraintLayout>
