--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,19 +1,16 @@
 <resources>
-	<!-- Default screen margins, per the Android Design guidelines. -->
-	<dimen name = "activityHorizontalMargin">16.13dp</dimen>
-	<dimen name = "activityVerticalMargin">16.13dp</dimen>
-	<!-- Per the design guidelines, navigation drawers should be between 240dp and 320dp:
-		 https://developer.android.com/design/patterns/navigation-drawer.html -->
-	<dimen name = "navigationHeaderVerticalSpacing">8.13dp</dimen>
-	<dimen name = "navigationHeaderHeight">176.13dp</dimen>
-	<dimen name = "waitingAssistantStandardSize">80.13dp</dimen>
-	<dimen name = "waitingAssistantSmallSize">50.13dp</dimen>
-	<dimen name = "imageViewAppLogoSize">200.13dp</dimen>
-	<dimen name = "contained_button_text_size">17.13sp</dimen>
-	<dimen name = "textInputLayoutCornerRadius">10.13dp</dimen>
-	<!-- Standardized Fragment paddings -->
-	<dimen name = "fragmentPaddingMedium">4.13dp</dimen>
-	<dimen name = "contained_button_margin">13dp</dimen>
-	<dimen name = "contained_button_corner_radius">25.13dp</dimen>
-	<dimen name = "contained_button_elevation">8dp</dimen>
+	<!-- Margins -->
+	<dimen name="margin_small">8dp</dimen>
+	<dimen name="margin_medium">16dp</dimen>
+	<dimen name="margin_large">24dp</dimen>
+	
+	<!-- Paddings -->
+	<dimen name="padding_small">4dp</dimen>
+	<dimen name="padding_medium">8dp</dimen>
+	<dimen name="padding_large">12dp</dimen>
+	
+	<!-- Button text sizes -->
+	<dimen name="button_text_size_small">14sp</dimen>
+	<dimen name="button_text_size_medium">18sp</dimen>
+	<dimen name="button_text_size_large">22sp</dimen>
 </resources>
