--- a/app/src/main/res/animator/clockwise_rotation_indefinite_accelerate_decelerate_interpolator.xml
+++ b/app/src/main/res/animator/clockwise_rotation_indefinite_accelerate_decelerate_interpolator.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <objectAnimator
 	xmlns:android="http://schemas.android.com/apk/res/android"
-	android:duration="513"
+	android:duration="@android:integer/config_mediumAnimTime"
 	android:interpolator="@android:anim/accelerate_decelerate_interpolator"
 	android:propertyName="rotation"
 	android:repeatCount="infinite"
