--- a/app/src/main/res/layout/fragment_forgot_login.xml
+++ b/app/src/main/res/layout/fragment_forgot_login.xml
@@ -50,6 +50,7 @@
 				android:hint="@string/email"
 				android:inputType="textEmailAddress"
 				android:maxLines="1"
+				android:imeOptions="actionSend"
 				android:singleLine="true"
 				android:text="@={viewModel.email}"
 				/>
