--- a/app/src/main/res/layout/fragment_family_name.xml
+++ b/app/src/main/res/layout/fragment_family_name.xml
@@ -6,7 +6,11 @@
 	>
 	
 	<data>
-	
+		
+		<variable
+			name="viewModel"
+			type="com.aresid.happyapp.signup.form.FamilyNameViewModel"
+			/>
 	</data>
 	
 	<androidx.constraintlayout.widget.ConstraintLayout
@@ -31,6 +35,7 @@
 				android:layout_width="match_parent"
 				android:layout_height="match_parent"
 				android:hint="@string/family_name_with_star"
+				android:text="@={viewModel.familyName}"
 				android:imeActionId="2"
 				android:imeOptions="actionNext"
 				android:inputType="textCapSentences|textAutoCorrect"
@@ -43,6 +48,7 @@
 			android:layout_width="wrap_content"
 			android:layout_height="wrap_content"
 			android:text="@string/next"
+			android:onClick="@{() -> viewModel.onNextButtonClicked()}"
 			app:layout_constraintEnd_toEndOf="@id/guideline_start"
 			app:layout_constraintStart_toStartOf="@id/guideline_end"
 			app:layout_constraintTop_toBottomOf="@id/family_name_field_layout"
